spring-cloud-native/spring-cloud-dashboard/src/main/jkube/sc-dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sc-dashboard-ingress
  namespace: bjrdc-dev
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20M"
spec:
  rules:
  - host: ingress.bjrdc17
    http:
      paths:
      - path: /sc-dashboard
        backend:
          serviceName: spring-cloud-dashboard
          servicePort: 8085
